--- a/user/templates/user/history.html
+++ b/user/templates/user/history.html
@@ -27,9 +27,59 @@
 <body>
 
     <div class="global-wrap">
-        <header id="main-header">
+           <header id="main-header">
+        <div class="header-top">
+            <div class="container">
+                <div class="row">
 
-        </header>
+            <nav class="navbar ">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle " data-target="#myNavBar" data-toggle="collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand hidden-sm" href="#">Flash</a>
+                    </div>
+                    <div class="navbar-collapse collapse" id="myNavBar">
+                        <ul class="nav navbar-nav">
+                            <li><a href="{% url 'index' %} }}" class="active">Home</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Accounts<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Register</a></li>
+                                    <li><a href="#">Login</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="{% url 'transfer:formHandler' %}">Profile</a></li>
+
+                            <li><a href="#">Education</a></li>
+                            <li><a href="#">Partners</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Staff<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Login</a></li>
+                                    <li><a href="#">Register</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+                         </div>
+            </div>
+        </div>  <!-- //End container -->
+
+
+             </header>
+
+
 
         <div class="container">
             <h1 class="page-title">User Profile</h1>
@@ -53,7 +103,7 @@
                             </li>
                             <li><a href="{% url 'user:profileupdate'  DBobj.id %}"><i class="fa fa-cog"></i>Settings</a>
                             </li>
-                         <li><a href="{% url 'user:shares'%}"><i class="fa fa-cog"></i>Shares</a>
+                         <li><a href="{% url 'user:shares'%}"><i class="fa fa-life-ring"></i>Shares</a>
                             </li>
                             <li><a href="{% url 'user:members'%}"><i class="fa fa-group"></i>Group Account</a>
                             </li>
@@ -67,7 +117,11 @@
                     </aside>
                 </div>
 
+
                                 <div class="col-md-9">
+<div class="row">
+    <h4>Welcome {{ DBobj.firstName }} </h4>
+</div>
 
                                 {% if historySet %}
                     <table class="table table-bordered table-striped table-booking-history">
@@ -78,17 +132,16 @@
                                 <th>Description</th>
                                 <th>Branch</th>
                                 <th>Date</th>
-
                                 <th>Amount</th>
                                 <th>Status</th>
-                                <th>Cancel</th>
+
                             </tr>
                         </thead>
                         <tbody>
 
                         {% for history in historySet %}
                             <tr>
-                                <td class="booking-history-type"><i class="fa fa-group"></i><small>{{ history.accType }} Account</small>
+                                <td class="booking-history-type"><i class="fa fa-user"></i><small>{{ history.accType }} Account</small>
                                 </td>
                                 <td>{{ history.activityType }}</td>
                                 <td class="booking-history-title">{{ history.activity }}</td>
@@ -111,7 +164,6 @@
 
             </div>
         </div>
-
 
         <div class="gap"></div>
 
