--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -69,7 +69,7 @@
                         {% csrf_token %}
                      {% for field in form %}
                           <div class="form-group form-group-icon-left"><i class="fa fa-user input-icon"></i>
-                         {{ field.label }}
+                         <label> {{ field.label }}</label>
                         {{ field }}
                           </div>
                     {% endfor %}
